--- a/src/assets/style/font.css
+++ b/src/assets/style/font.css
@@ -1,15 +1,38 @@
+/* noto-sans-kr-regular - korean */
 @font-face {
-  font-family: 'Spoqa Han Sans Neo';
-  src: url('../font/Spoqa\ Han\ Sans\ Regular.ttf');
-  src: url('../font/Spoqa\ Han\ Sans\ Regular.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Noto Sans KR';
   font-style: normal;
+  font-weight: 400;
+  src: url('../font/noto-sans-kr-v13-korean-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+    url('../font/noto-sans-kr-v13-korean-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../font/noto-sans-kr-v13-korean-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../font/noto-sans-kr-v13-korean-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../font/noto-sans-kr-v13-korean-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../font/noto-sans-kr-v13-korean-regular.svg#NotoSansKR')
+      format('svg'); /* Legacy iOS */
 }
 
+/* noto-sans-kr-700 - korean */
 @font-face {
-  font-family: 'Spoqa Han Sans Neo';
-  src: url('../font/Spoqa\ Han\ Sans\ Bold.ttf');
-  src: url('../font/Spoqa\ Han\ Sans\ Bold.ttf') format('truetype');
-  font-weight: bold;
+  font-family: 'Noto Sans KR';
   font-style: normal;
+  font-weight: 700;
+  src: url('../font/noto-sans-kr-v13-korean-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+    url('../font/noto-sans-kr-v13-korean-700.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../font/noto-sans-kr-v13-korean-700.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */ url('../font/noto-sans-kr-v13-korean-700.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../font/noto-sans-kr-v13-korean-700.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../font/noto-sans-kr-v13-korean-700.svg#NotoSansKR') format('svg'); /* Legacy iOS */
 }
