--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -15,3 +15,11 @@
 body {
   background-color: #f7f7f7;
 }
+
+.container {
+  display: flex;
+  margin: 0 auto;
+  padding-top: 60px;
+  height: 100%;
+  max-width: 1440px;
+}
