--- a/src/components/header_gnb/header.css
+++ b/src/components/header_gnb/header.css
@@ -1,9 +1,11 @@
 .header-gnb {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 24px;
   border-bottom: 1px solid #f4f4f4;
+  width: 100%;
   height: 60px;
   background-color: #fff;
 }
@@ -44,7 +46,7 @@
   overflow: auto;
   border-radius: 6px;
   background-color: #fff;
-  box-shadow: 2px 2px 10px #e6e6e6;
+  box-shadow: 2px 2px 8px #666;
   transition: all 0.4s;
 }
 
