--- a/src/components/header_gnb/header.css
+++ b/src/components/header_gnb/header.css
@@ -3,11 +3,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 24px;
+  padding: 0 12px;
   border-bottom: 1px solid #f4f4f4;
   width: 100%;
   height: 60px;
   background-color: #fff;
+  z-index: 10;
 }
 
 .gnb-form {
@@ -17,7 +18,12 @@
   flex-basis: 50%;
   margin: 0 0 0 40px;
   padding: 0 4px;
+  max-width: 800px;
   height: 30px;
+}
+
+.gnb-form.open .search-history {
+  top: 50px;
 }
 
 .video-search-input {
@@ -26,7 +32,7 @@
   border: 1px solid #eeee;
   border-radius: 2px 0 0 2px;
   border-right: none;
-  height: 100%;
+  height: 32px;
   color: #1d1d1d;
   font-size: 14px;
 }
@@ -72,7 +78,7 @@
   border: 1px solid #ededed;
   border-radius: 0 2px 2px 0;
   width: 65px;
-  height: 100%;
+  height: 32px;
   background-image: url('../../assets/images/header_icon_split.svg');
   background-repeat: no-repeat;
   background-position: 21px -78px;
@@ -86,6 +92,7 @@
   background-position: -19px -78px;
 }
 
+/* navigation */
 .gnb-tool-list {
   display: flex;
 }
