--- a/src/components/search_error.jsx/search_error.module.css
+++ b/src/components/search_error.jsx/search_error.module.css
@@ -8,25 +8,31 @@
   padding: 2rem 1.4rem;
 }
 
-.img-wrap {
+.imgContainer {
   width: 60%;
   height: 40%;
   margin-bottom: 2em;
 }
 
-.no_found-img {
+.img {
   width: 100%;
   height: 100%;
   background: center / contain no-repeat
-    url("../../assets/images/not_found.svg");
+    url('../../assets/images/not_found.svg');
 }
 
-.search-Title {
+.title {
   font-size: 24px;
   font-weight: 400;
   margin-bottom: 0.2em;
 }
 
-.search-desc {
+.desc {
   font-size: 14px;
+  color: #666;
+}
+
+/* darkmode */
+.wrapper.dark .title {
+  color: #fdfdfd;
 }
