--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -22,3 +22,15 @@ body {
   padding-top: 90px;
   height: 100%;
 }
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #cccc;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f7f7f7;
+}
