--- a/src/assets/style/font.module.css
+++ b/src/assets/style/font.module.css
@@ -3,7 +3,7 @@
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 400;
-  display: block;
+  display: swap;
   src: url('../font/noto-sans-kr-v13-korean-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
     url('../font/noto-sans-kr-v13-korean-regular.eot?#iefix')
