--- a/src/assets/style/layout.module.css
+++ b/src/assets/style/layout.module.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  margin: 0 auto;
+  height: 100%;
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -13,6 +19,12 @@
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
   }
 }
 
