--- a/src/components/header_gnb/header.module.css
+++ b/src/components/header_gnb/header.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 0 12px;
   border-bottom: 1px solid #f4f4f4;
-  width: 100%;
+  width: 100vw;
   height: 60px;
   background-color: #fff;
   z-index: 10;
@@ -163,10 +163,6 @@
   background-color: #202020;
 }
 
-.gnb.dark .logo {
-  background-image: url('../../assets/images/dark_mode_logo.svg');
-}
-
 .gnb.dark .searchInput {
   border: 1px solid #2b2b2b;
   color: #fefefe;
@@ -235,17 +231,47 @@
   opacity: 0;
 }
 
+/* tooltip */
+.tooltipBox {
+  position: absolute;
+  left: -6px;
+  top: 62px;
+  display: none;
+  padding: 6px;
+  min-width: 52px;
+  border-radius: 2px;
+  background-color: #00000077;
+  font-size: 14px;
+  color: #fdfdfd;
+  text-align: center;
+}
+
+.mirror:hover + .tooltipBox,
+.mirror:focus + .tooltipBox,
+.alarm:hover + .tooltipBox,
+.alarm:focus + .tooltipBox,
+.search:hover + .tooltipBox,
+.search:focus + .tooltipBox,
+.user:hover + .tooltipBox,
+.user:focus + .tooltipBox {
+  display: block;
+}
+
 @media screen and (max-width: 1024px) {
   .form {
     position: fixed;
     left: 0;
     top: 50px;
     margin-left: 0;
-    padding: 1rem;
-    width: 100%;
+    padding: 1em 2em;
+    width: 100vw;
     height: auto;
     max-width: none;
     background-color: #fff;
+  }
+
+  .history {
+    top: 48px;
   }
 
   .search.moblieBtn {
