Update px to em,rem

--- a/src/assets/style/layout.module.css
+++ b/src/assets/style/layout.module.css
@@ -4,32 +4,32 @@
   height: 100%;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 36em) {
   .container {
-    max-width: 540px;
+    max-width: 100%;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 48em) {
   .container {
-    max-width: 720px;
+    max-width: 76em;
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 62em) {
   .container {
-    max-width: 960px;
+    max-width: 106em;
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 64em) {
   .container {
     flex-direction: column;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 75em) {
   .container {
-    max-width: 1440px;
+    max-width: 160em;
   }
 }
