--- a/src/components/header_gnb/header.module.css
+++ b/src/components/header_gnb/header.module.css
@@ -3,10 +3,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 12px;
+  padding: 0 1.4em;
   border-bottom: 1px solid #f4f4f4;
   width: 100vw;
-  height: 60px;
+  height: 6em;
   background-color: #fff;
   z-index: 10;
 }
@@ -16,10 +16,10 @@
   display: flex;
   align-items: center;
   flex-basis: 50%;
-  margin: 0 0 0 40px;
-  padding: 0 4px;
-  max-width: 800px;
-  height: 30px;
+  margin: 0 0 0 4em;
+  padding: 0 0.4em;
+  max-width: 80em;
+  height: 3em;
 }
 
 .form.open .history {
@@ -28,29 +28,28 @@
 
 .searchInput {
   flex-grow: 20;
-  padding: 4px 6px;
+  padding: 0.4em 0.6em;
   border: 1px solid #eeee;
-  border-radius: 2px 0 0 2px;
+  border-radius: 2px 0 0 0.2em;
   border-right: none;
-  height: 32px;
   color: #1d1d1d;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 
 .searchInput:focus + .history {
-  padding: 12px 0;
-  max-height: 200px;
+  padding: 1.2em 0;
+  max-height: 20em;
 }
 
 .history {
   position: absolute;
   left: 0;
-  top: 34px;
+  top: 3.4em;
   padding: 0;
   width: 100%;
   max-height: 0;
   overflow: auto;
-  border-radius: 6px;
+  border-radius: 0.6em;
   background-color: #fff;
   box-shadow: 2px 2px 8px #666;
   transition: all 0.4s;
@@ -62,9 +61,9 @@
 }
 
 .historyItem {
-  padding: 10px;
+  padding: 1em;
   width: 100%;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-align: left;
   word-break: break-all;
 }
@@ -77,8 +76,8 @@
   cursor: pointer;
   border: 1px solid #ededed;
   border-radius: 0 2px 2px 0;
-  width: 65px;
-  height: 32px;
+  width: 6.5em;
+  height: 3.2em;
   background-image: url('../../assets/images/header_icon_split.svg');
   background-repeat: no-repeat;
   background-position: 21px -78px;
@@ -105,8 +104,8 @@
 .toolBtn {
   line-height: 1;
   padding: 8px;
-  width: 40px;
-  height: 40px;
+  width: 4em;
+  height: 4em;
   background-image: url('../../assets/images/header_icon_split.svg');
   background-repeat: no-repeat;
 }
@@ -116,7 +115,7 @@
 }
 
 .toolList .toolItem:not(:last-child) {
-  margin-right: 8px;
+  margin-right: 0.8em;
 }
 
 .search {
@@ -237,11 +236,11 @@
   left: -6px;
   top: 62px;
   display: none;
-  padding: 6px;
-  min-width: 52px;
+  padding: 0.2em;
+  min-width: 3.6em;
   border-radius: 2px;
   background-color: #00000077;
-  font-size: 14px;
+  font-size: 1.4rem;
   color: #fdfdfd;
   text-align: center;
 }
