--- a/src/components/search_error.jsx/search_error.module.css
+++ b/src/components/search_error.jsx/search_error.module.css
@@ -24,11 +24,11 @@
 .title {
   font-size: 24px;
   font-weight: 400;
-  margin-bottom: 0.2em;
+  margin-bottom: 0.4em;
 }
 
 .desc {
-  font-size: 14px;
+  font-size: 1.4rem;
   color: #666;
 }
 
