--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -2,22 +2,12 @@
   font-family: 'Noto Sans KR', 'sans-serif';
 }
 
-.screen-out {
-  position: absolute;
-  left: -1000px;
-  top: -1000px;
-  width: 1px;
-  height: 1px;
-  z-index: -100;
-  opacity: 0;
-}
-
 body {
   background-color: #f7f7f7;
 }
 
 body::-webkit-scrollbar {
-  width: 10px;
+  width: 1em;
 }
 
 body::-webkit-scrollbar-thumb {
