--- a/src/components/ui/ui_style.module.css
+++ b/src/components/ui/ui_style.module.css
@@ -11,8 +11,8 @@
 /* logo */
 .logo {
   display: block;
-  width: 122px;
-  height: 26px;
+  width: 12.2em;
+  height: 2.6em;
   background-image: url('../../assets/images/logo.svg');
   background-size: cover;
   background-position: center;
@@ -27,8 +27,8 @@
 /* controller */
 .controlBtn {
   position: fixed;
-  width: 48px;
-  height: 48px;
+  width: 4.8em;
+  height: 4.8em;
   border-radius: 50%;
   background-color: #fff;
   box-shadow: 0px 0px 8px #cdcdcd;
