--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,6 +1,6 @@
 .item {
-  margin: 0 12px 10px;
-  max-width: 320px;
+  margin: 0 1.2em 1em;
+  max-width: 32em;
   cursor: pointer;
 }
 
@@ -38,17 +38,17 @@
 
 .info {
   display: flex;
-  padding: 8px 0;
+  padding: 0.6em 0;
 }
 
 .left {
-  margin-right: 8px;
+  margin-right: 0.6em;
 }
 
 .channelLogo {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 4em;
+  height: 4em;
   border-radius: 50%;
 }
 
@@ -56,14 +56,14 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin-bottom: 2px;
-  font-size: 14px;
+  margin-bottom: 0.2em;
+  font-size: 1.4rem;
   font-weight: 400;
   overflow: hidden;
 }
 
 .desc {
-  font-size: 14px;
+  font-size: 1.4rem;
   color: #666;
 }
 
