--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #f6f6f6;
 }
 
 body::-webkit-scrollbar {
@@ -15,5 +15,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 body::-webkit-scrollbar-track {
-  background-color: #f7f7f7;
+  background-color: #f6f6f6;
+}
+
+/* darkmode */
+body.dark {
+  background-color: #181818;
+}
+
+body.dark::-webkit-scrollbar-track {
+  background-color: #181818;
 }
