--- a/src/assets/style/video_item.module.css
+++ b/src/assets/style/video_item.module.css
@@ -1,3 +1,9 @@
+@value color: '../../assets/common/color.css';
+@value font: '../../assets/common/font.css';
+
+@value orginWhite, middleWhite, orgingGray, opacityBlack from color;
+@value baseFont, xlFont from font;
+
 .item {
   margin: 0 1.2em 1em;
   max-width: 32em;
@@ -8,7 +14,6 @@
   position: relative;
   overflow: hidden;
   transition: box-shadow 0.6s;
-  z-index: -1;
 }
 
 .thumbnail::after {
@@ -21,16 +26,17 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  font-size: 2.8rem;
+  background: opacityBlack;
+  font-size: xlFont;
   text-align: center;
-  color: #fff;
+  color: orginWhite;
   transform: translateY(100%);
   opacity: 0;
   transition: all 0.4s;
 }
 
 .img {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -57,14 +63,14 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 0.2em;
-  font-size: 1.4rem;
+  font-size: baseFont;
   font-weight: 400;
   overflow: hidden;
 }
 
 .desc {
-  font-size: 1.4rem;
-  color: #666;
+  font-size: baseFont;
+  color: orgingGray;
 }
 
 .item.column {
@@ -87,7 +93,7 @@
 }
 
 .item:hover .thumbnail {
-  box-shadow: 1px 1px 24px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px 1px 24px opacityBlack;
 }
 
 .item:hover .thumbnail::after {
@@ -97,5 +103,5 @@
 
 /* darkmode */
 .item.dark .title {
-  color: #fcfcfc;
+  color: middleWhite;
 }
