--- a/src/assets/style/video_list.module.css
+++ b/src/assets/style/video_list.module.css
@@ -1,3 +1,7 @@
+@value layout: '../../assets/common/break_point.css';
+
+@value mediaLarge from layout;
+
 .list {
   display: flex;
   justify-content: center;
@@ -10,12 +14,12 @@
   min-width: 30%;
 }
 
-@media screen and (max-width: 1024px) {
+@media mediaLarge {
   .list {
     min-width: 100%;
   }
 
   .list.column {
-    padding: 3em 0;
+    padding: 2em 0;
   }
 }
