--- a/src/assets/common/break_point.css
+++ b/src/assets/common/break_point.css
@@ -1,5 +1,5 @@
 @value mediaMicro: (min-width: 36em);
 @value mediaSmall: (min-width: 48em);
 @value mediaMiddle: (min-width: 62em);
-@value mediaLarge: (max-width: 64em);
-@value mediaXL: (min-width: 76em);
+@value customSize: (max-width: 64em);
+@value mediaLarge: (min-width: 76em);
