--- a/src/assets/style/video_list.module.css
+++ b/src/assets/style/video_list.module.css
@@ -1,6 +1,6 @@
 @value layout: '../../assets/common/break_point.css';
 
-@value mediaLarge from layout;
+@value customSize from layout;
 
 .list {
   display: flex;
@@ -14,7 +14,7 @@
   min-width: 30%;
 }
 
-@media mediaLarge {
+@media customSize {
   .list {
     min-width: 100%;
   }
