--- a/src/assets/style/video_content.module.css
+++ b/src/assets/style/video_content.module.css
@@ -37,9 +37,10 @@
 }
 
 .title {
-  font-size: middleRem;
-  font-weight: 400;
+  margin: 0;
   padding: 0.6em 0;
+  font-size: midFont;
+  font-weight: 400;
   overflow: hidden;
 }
 
